log/build_2023-10-30_09-28-04/remote_controller_pkg/stdout_stderr.log
running egg_info
writing ../../build/remote_controller_pkg/remote_controller_pkg.egg-info/PKG-INFO
writing dependency_links to ../../build/remote_controller_pkg/remote_controller_pkg.egg-info/dependency_links.txt
writing entry points to ../../build/remote_controller_pkg/remote_controller_pkg.egg-info/entry_points.txt
writing requirements to ../../build/remote_controller_pkg/remote_controller_pkg.egg-info/requires.txt
writing top-level names to ../../build/remote_controller_pkg/remote_controller_pkg.egg-info/top_level.txt
reading manifest file '../../build/remote_controller_pkg/remote_controller_pkg.egg-info/SOURCES.txt'
writing manifest file '../../build/remote_controller_pkg/remote_controller_pkg.egg-info/SOURCES.txt'
running build
running build_py
copying remote_controller_pkg/remote_node.py -> /home/bodlaire/Desktop/Work/Mocap/build/remote_controller_pkg/build/lib/remote_controller_pkg
running install
running install_lib
copying /home/bodlaire/Desktop/Work/Mocap/build/remote_controller_pkg/build/lib/remote_controller_pkg/remote_node.py -> /home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/python3.8/site-packages/remote_controller_pkg
byte-compiling /home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/python3.8/site-packages/remote_controller_pkg/remote_node.py to remote_node.cpython-38.pyc
running install_data
running install_egg_info
  File "/home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/python3.8/site-packages/remote_controller_pkg/remote_node.py", line 104
    def main:
            ^
SyntaxError: invalid syntax

removing '/home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/python3.8/site-packages/remote_controller_pkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/remote_controller_pkg/remote_controller_pkg.egg-info to /home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/python3.8/site-packages/remote_controller_pkg-0.0.0-py3.8.egg-info
running install_scripts
Installing remote_node script to /home/bodlaire/Desktop/Work/Mocap/install/remote_controller_pkg/lib/remote_controller_pkg
writing list of installed files to '/home/bodlaire/Desktop/Work/Mocap/build/remote_controller_pkg/install.log'
